add toggle menu animation

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20074,7 +20074,7 @@ video {
 }
 
 .grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-columns: repeat(12, minmax(265px, 1fr));
 }
 
 .grid-cols-none {
@@ -41726,7 +41726,7 @@ video {
   }
 
   .sm\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-columns: repeat(12, minmax(265px, 1fr));
   }
 
   .sm\:grid-cols-none {
@@ -63313,7 +63313,7 @@ video {
   }
 
   .md\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-columns: repeat(12, minmax(265px, 1fr));
   }
 
   .md\:grid-cols-none {
@@ -84900,7 +84900,7 @@ video {
   }
 
   .lg\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-columns: repeat(12, minmax(265px, 1fr));
   }
 
   .lg\:grid-cols-none {
@@ -106487,7 +106487,7 @@ video {
   }
 
   .xl\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-columns: repeat(12, minmax(265px, 1fr));
   }
 
   .xl\:grid-cols-none {
